--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "keywords": [],
   "devDependencies": {
     "webpack": "^4.44.2",
+    "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
